Fixed user list fade bleeding over li borders.

--- a/less/room.less
+++ b/less/room.less
@@ -1162,6 +1162,7 @@
   .user {
     position: relative;
     height: @user-height;
+    overflow: hidden;
 
     .li-container {
       position: absolute;
